# graphos

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  mkdocs.yml  test_graphos.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  crates.yml  docs.yml  pypi.yml  release.yml
crates/bindings/go/: README.md  go.mod  grafeo.go
crates/bindings/js/: README.md  index.d.ts  index.js  package.json
crates/bindings/python/: Cargo.toml  pyproject.toml
crates/bindings/python/src/: database.rs
crates/bindings/wasm/: README.md  grafeo_wasm.d.ts  grafeo_wasm.js  package.json
crates/grafeo/: Cargo.toml  README.md
crates/grafeo-adapters/src/query/: mod.rs
crates/grafeo-cli/: Cargo.toml
crates/grafeo-cli/src/: main.rs
crates/grafeo-cli/src/commands/: backup.rs  compact.rs  data.rs  index.rs  info.rs  mod.rs  schema.rs  stats.rs  validate.rs  wal.rs
crates/grafeo-cli/src/output/: mod.rs
crates/grafeo-core/src/index/: mod.rs
crates/grafeo-engine/src/: database.rs  lib.rs  session.rs
crates/grafeo-engine/src/query/: gql_translator.rs  planner.rs  planner_rdf.rs  sparql_translator.rs
crates/grafeo-python/: pyproject.toml
crates/grafeo-python/src/: database.rs  lib.rs
crates/grafeo/src/: lib.rs
crates/graphos-adapters/: Cargo.toml
crates/graphos-adapters/src/: lib.rs
crates/graphos-adapters/src/plugins/: mod.rs
crates/graphos-adapters/src/plugins/algorithms/: centrality.rs  community.rs  components.rs  flow.rs  mod.rs  mst.rs  shortest_path.rs  structure.rs  traits.rs  traversal.rs
crates/graphos-adapters/src/query/cypher/: parser.rs
crates/graphos-adapters/src/query/gql/: ast.rs  lexer.rs  mod.rs  parser.rs
crates/graphos-adapters/src/query/graphql/: ast.rs  parser.rs
crates/graphos-adapters/src/query/gremlin/: parser.rs
crates/graphos-adapters/src/query/sparql/: lexer.rs  parser.rs
crates/graphos-adapters/src/storage/wal/: async_log.rs  log.rs  mod.rs  recovery.rs
crates/graphos-common/: Cargo.toml
crates/graphos-common/benches/: arena_bench.rs
crates/graphos-common/src/: lib.rs  mvcc.rs
crates/graphos-common/src/memory/: arena.rs  bump.rs  pool.rs
crates/graphos-common/src/types/: id.rs  mod.rs  value.rs
crates/graphos-common/src/utils/: error.rs  hash.rs
crates/graphos-core/: Cargo.toml
crates/graphos-core/benches/: index_bench.rs
crates/graphos-core/src/: lib.rs
crates/graphos-core/src/execution/: chunk.rs  memory.rs  source.rs  vector.rs
crates/graphos-core/src/index/: adjacency.rs  trie.rs  zone_map.rs
crates/graphos-core/src/statistics/: collector.rs  histogram.rs  mod.rs  rdf.rs
crates/graphos-core/src/storage/: bitpack.rs  bitvec.rs  codec.rs  delta.rs  dictionary.rs  mod.rs
crates/graphos-core/tests/: rdf_tests.rs
crates/graphos-engine/: Cargo.toml
crates/graphos-engine/src/: database.rs  lib.rs  session.rs
crates/graphos-engine/src/catalog/: mod.rs
crates/graphos-engine/src/query/: binder.rs  cypher_translator.rs  gql_translator.rs  graphql_rdf_translator.rs  graphql_translator.rs  gremlin_translator.rs  mod.rs  plan.rs  planner.rs  planner_rdf.rs  processor.rs  sparql_translator.rs
crates/graphos-engine/src/query/executor/: mod.rs
crates/graphos-engine/src/query/optimizer/: cardinality.rs  cost.rs  join_order.rs  mod.rs
crates/graphos-engine/src/transaction/: manager.rs  mod.rs  mvcc.rs
crates/graphos-engine/tests/: concurrent_sessions.rs  graph_benchmarks.rs  mvcc_integration.rs  query_correctness.rs
crates/graphos-python/: Cargo.toml  pyproject.toml
crates/graphos-python/src/: database.rs  graph.rs  lib.rs  query.rs  types.rs
crates/graphos-python/src/bridges/: algorithms.rs  networkx.rs  solvor.rs
docs/: CNAME  index.md  llms.txt  roadmap.md
docs/algorithms/: centrality.md  community.md  index.md  link-prediction.md  metrics.md  path-finding.md  similarity.md
docs/api/: index.md
docs/api/python/: database.md  edge.md  index.md  node.md  result.md  transaction.md
docs/api/rust/: engine.md
docs/architecture/: crates.md  overview.md
docs/architecture/memory/: spill.md
docs/architecture/transactions/: isolation.md
docs/comparisons/: graphql-vs-gql.md  gremlin-vs-gql.md  sparql-vs-gql.md
docs/contributing/: setup.md  testing.md
docs/getting-started/: cli.md  configuration.md  first-graph.md  installation.md  quickstart.md
docs/overrides/: main.html
docs/tutorials/: fraud-detection.md  knowledge-graph.md  recommendations.md  social-network.md
docs/user-guide/: index.md  transactions.md
docs/user-guide/extending/: custom-functions.md
docs/user-guide/graphql/: index.md
docs/user-guide/gremlin/: index.md
docs/user-guide/persistence/: in-memory.md  persistent.md  wal.md
docs/user-guide/python/: database.md  edges.md  index.md  nodes.md  results.md  transactions.md
docs/user-guide/rust/: database.md  index.md
docs/user-guide/sparql/: functions.md  index.md
scripts/: ci-clean.ps1  ci-clean.sh  ci-local.ps1  ci-local.sh
tests/python/: conftest.py  test_graphos.py
tests/python/bases/: __init__.py  bench_algorithms.py  bench_storage.py  test_admin.py  test_algorithms.py  test_mutations.py  test_networkx.py  test_queries.py  test_solvor.py  test_transactions.py
tests/python/fixtures/: __init__.py  datasets.py  generators.py  utils.py
tests/python/lpg/: conftest.py  test_compatibility.py
tests/python/lpg/cypher/: bench_algorithms.py  bench_storage.py  conftest.py  test_admin.py  test_algorithms.py  test_mutations.py  test_networkx.py  test_queries.py  test_solvor.py  test_transactions.py
tests/python/lpg/gql/: bench_algorithms.py  bench_storage.py  conftest.py  test_admin.py  test_algorithms.py  test_mutations.py  test_networkx.py  test_queries.py  test_solvor.py  test_transactions.py
tests/python/lpg/graphql/: bench_algorithms.py  bench_storage.py  conftest.py  test_algorithms.py  test_mutations.py  test_networkx.py  test_queries.py  test_solvor.py  test_transactions.py
tests/python/lpg/gremlin/: bench_algorithms.py  (+8 more)
tests/python/rdf/: conftest.py  test_compatibility.py
(+55 files in other folders)
