[package]
name = "grafeo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance, pure-Rust, embeddable graph database"
keywords = ["graph", "database", "gql", "knowledge-graph", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
grafeo-engine = { path = "../grafeo-engine", version = "0.1.4" }
grafeo-core = { path = "../grafeo-core", version = "0.1.4" }
grafeo-common = { path = "../grafeo-common", version = "0.1.4" }
grafeo-adapters = { path = "../grafeo-adapters", version = "0.1.4" }

[features]
default = ["full"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
full = ["gql", "cypher", "sparql", "gremlin", "graphql"]

[lints]
workspace = true
