[package]
name = "graphos-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage, query language, and plugin adapters for Graphos"

[dependencies]
graphos-common.workspace = true
graphos-core.workspace = true

# Error handling
thiserror.workspace = true

# Data structures
smallvec.workspace = true
hashbrown.workspace = true

# Memory & I/O
memmap2.workspace = true
bytes.workspace = true
byteorder.workspace = true

# Checksums
crc32fast.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam.workspace = true

# Async
tokio.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[features]
default = ["gql"]
gql = []       # GQL parser (always available)
cypher = []    # Cypher parser (optional)
full = ["gql", "cypher"]

[lints]
workspace = true
