[package]
name = "graphos-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Graphos graph database"

[lib]
name = "graphos"
crate-type = ["cdylib"]

[dependencies]
graphos-engine = { path = "../graphos-engine" }
graphos-core = { path = "../graphos-core" }
graphos-common = { path = "../graphos-common" }
graphos-adapters = { path = "../graphos-adapters" }

pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-async-runtimes = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["gql"]
gql = ["graphos-engine/gql"]
cypher = ["graphos-engine/cypher"]
sparql = ["graphos-engine/sparql"]
gremlin = ["graphos-engine/gremlin"]
graphql = ["graphos-engine/graphql"]
full = ["gql", "cypher", "sparql", "gremlin", "graphql"]

[lints]
workspace = true
